Added account creation with firebase integration, and basiv login feature

--- a/web/index.html
+++ b/web/index.html
@@ -40,6 +40,29 @@
       });
     }
   </script>
+
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-firestore.js"></script>
+
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+       https://firebase.google.com/docs/web/setup#available-libraries -->
+
+  <script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyCP8n2HtURJ6dkdz8YgOnHzPnGczt74ijY",
+    authDomain: "futureproof-736c1.firebaseapp.com",
+    projectId: "futureproof-736c1",
+    storageBucket: "futureproof-736c1.appspot.com",
+    messagingSenderId: "681358401888",
+    appId: "1:681358401888:web:d2780634deaccfae4c7e05"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
+
   <script src="main.dart.js" type="application/javascript"></script>
 </body>
 </html>
